# dsl-topic-models

./: .env.example  .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: bertopic.yaml  ctm_combined.yaml  ctm_zeroshot.yaml  etm.yaml  fastopic.yaml  generative.yaml  lda.yaml  prodlda.yaml
data/raw_data/: stackoverflow_test.tsv  stackoverflow_train.tsv  tweet_topic.tsv
scripts/: ablation_bow_target.sh  ablation_embedding.sh  ablation_loss.sh  ablation_prompt_sensitivity.sh  ablation_sparsity.sh  ablation_temperature.sh  ablation_topk.sh  ablation_vocab_size.sh  common.sh  process_all.sh  reproduce_all.sh  run_backbones.sh  run_baselines.sh  run_dsl.sh  run_main.sh  run_retrieval.sh
src/dsl_topic/: __init__.py  paths.py  settings.py
src/dsl_topic/cli/: __init__.py  _io.py  _model_builders.py  process_dataset.py  retrieval.py  summarize.py  train.py
src/dsl_topic/data/: __init__.py  ctm_dataset.py  loaders.py  octis_dataset.py  preprocessing.py  tokenization.py
src/dsl_topic/evaluation/: __init__.py  coherence.py  diversity.py  metrics.py  retrieval.py
src/dsl_topic/models/: __init__.py
src/dsl_topic/models/_vendored/: NOTICE.md  __init__.py
src/dsl_topic/models/_vendored/fastopic/: FASTopic.py  FASTopic_trainer.py  _ETP.py  __init__.py
src/dsl_topic/models/_vendored/octis/: CTM.py  ETM.py  LDA.py  ProdLDA.py  __init__.py
src/dsl_topic/models/_vendored/octis/configuration/: defaults.py
src/dsl_topic/models/_vendored/octis/contextualized_topic_models/: ctm.py  data_preparations.py  datasets.py  decoding_network.py
src/dsl_topic/models/_vendored/octis/early_stopping/: pytorchtools.py
src/dsl_topic/models/_vendored/octis/etm/: abc.py
src/dsl_topic/models/_vendored/octis/pytorchavitm/: AVITM.py  decoder_network.py  model.py
src/dsl_topic/models/_vendored/topmost/: __init__.py
src/dsl_topic/models/_vendored/topmost/ECRTM/: ECRTM.py  ECRTM_Trainer.py  __init__.py  preprocess.py
src/dsl_topic/models/_vendored/topmost/data/: __init__.py  basic_dataset.py  download.py
src/dsl_topic/models/_vendored/topmost/preprocess/: __init__.py  preprocess.py
src/dsl_topic/models/_vendored/topmost/utils/: _utils.py
src/dsl_topic/models/baselines/fastopic/: FASTopic.py  FASTopic_trainer.py  __init__.py
src/dsl_topic/models/baselines/octis/: CTM.py  ETM.py  LDA.py  ProdLDA.py  __init__.py
src/dsl_topic/models/baselines/octis/contextualized_topic_models/: ctm.py  data_preparations.py  decoding_network.py  inference_network.py
src/dsl_topic/models/baselines/octis/etm/: abc.py
src/dsl_topic/models/baselines/octis/pytorchavitm/: AVITM.py  decoder_network.py  model.py
src/dsl_topic/models/baselines/topmost/: __init__.py
src/dsl_topic/models/baselines/topmost/ECRTM/: ECRTM.py  ECRTM_Trainer.py  __init__.py
src/dsl_topic/models/baselines/topmost/data/: __init__.py  basic_dataset.py
src/dsl_topic/models/baselines/topmost/preprocess/: __init__.py  preprocess.py
src/dsl_topic/models/baselines/topmost/utils/: _utils.py
src/dsl_topic/models/dsl/: __init__.py  _objective.py  ecrtm.py  etm.py  fastopic.py  prodlda.py
src/dsl_topic/prompts/: __init__.py  renderer.py
src/dsl_topic/prompts/templates/: document_topic_distribution.jinja  topic_ratings_system.jinja  topic_ratings_user.jinja
src/dsl_topic/prompts/templates/instructions/: default.jinja  variant_1.jinja  variant_2.jinja  variant_3.jinja  variant_4.jinja  variant_5.jinja
tests/: test_ctm_dataset.py  test_data_helpers.py  test_evaluation.py  test_imports.py  test_integration_dsl.py  test_io_helpers.py  test_objective.py  test_registry.py  validate_processed_data.py
